--- a/src/cssFiles/miscComponents/navKorioto.css
+++ b/src/cssFiles/miscComponents/navKorioto.css
@@ -1,19 +1,49 @@
-.KoriotoNav{
-        /* background-color: tomato; */
+.koriotoNavContainer{
         display: flex;
+        flex-direction: column;
         justify-content: center;
-        width: 100%;
+        width: 100%;        
         position: fixed;
         top: 0;
         text-align: center;
         z-index: 1;
-        padding-top: 21px;
+}
+.KoriotoNav{
+        padding-top: 20px;
+        display: flex;
+        justify-content: center;
+        background-color: rgb(53, 53, 54);
+        height: 40px;
+
 }
 
+.koriotoNaviDeco{
+        margin-top: 1px;
+        width: 100%;
+        height: 2px;
+}
+
+.deco1{
+        background-color: rgb(179, 132, 3);
+}
+.deco2{
+        background-color: rgb(95, 95, 99);
+}
+.deco3{
+        background-color: rgb(181, 21, 0);
+}
+
+
 .NaviLink{
-        color: white;
+        color: rgb(206, 206, 202);
+        font-weight: 900;
         margin: 30px;
         text-decoration: none;
-        font-size: 1.8em;
-        text-shadow: 2px 2px #4c4b49;;
+        font-size: 1.3em;
+        transition: all 0.5s ease-in;
+}
+
+.NaviLink:hover{
+        transition: all 0.5s ease-in;
+        color: rgb(255, 255, 255);
 }
