--- a/src/cssFiles/pages/koriotoLanding.css
+++ b/src/cssFiles/pages/koriotoLanding.css
@@ -4,9 +4,16 @@
   pointer-events: none;
 }
 
-.app-fontface{
-  width:80vmin;
+.App-icon2{
+    height: 120vmin;
+  pointer-events: none;
     position: absolute;
+
+}
+
+.app-fontface{
+    position: absolute;
+  width:80vmin;
     bottom: -11px;
   text-shadow: 2px 2px red;
 
@@ -15,16 +22,23 @@
 @media (prefers-reduced-motion: no-preference) {
   .App-icon {
     animation: App-icon-spin infinite 18s linear;
-    animation-direction: alternate; /* or: normal */
-
+    animation-direction: reverse; /* or: normal */
+  }
+  .App-icon2 {
+    animation: App-icon-spin infinite 70s linear;
+    animation-direction: normal; /* or: normal */
   }
 }
 
 .App-header {
-    background-image: url("https://images.unsplash.com/photo-1543053976-476d89a9a0d7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
+    /* background-image: url("https://images.unsplash.com/photo-1543053976-476d89a9a0d7?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"); */
+    /* background-image: url("https://images.unsplash.com/photo-1545679216-ad934fececb0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80"); */
+    /* background-image: url("https://images.unsplash.com/photo-1527049979667-990f1d0d8e7f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1866&q=80"); */
+    background-image: url("https://images.unsplash.com/photo-1572451529660-997dd93da816?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80");
     /* background-image: url("https://images.unsplash.com/photo-1582035100994-9ddfc34b1dae?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=334&q=80"); */
   background-size: cover;
   background-color: #282c34;
+  /* transform: rotate(90deg); */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
