--- a/src/cssFiles/pages/koriotoLanding.css
+++ b/src/cssFiles/pages/koriotoLanding.css
@@ -1,6 +1,6 @@
 
 .App-icon {
-  height: 45vmin;
+  height: 70vmin;
   pointer-events: none;
 }
 
@@ -13,11 +13,11 @@
 
 .app-fontface{
     position: absolute;
-  width:80vmin;
+    width:80vmin;
     bottom: -11px;
-  text-shadow: 2px 2px red;
+    text-shadow: 2px 2px red;
 
-    }
+  }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-icon {
@@ -46,6 +46,8 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  overflow-x: hidden;
+
 }
 
 .App-link {
@@ -64,4 +66,13 @@
 .parralaxContainer{
   height: 40vh;
   background-color: rgb(144, 18, 18);
+}
+
+@media screen and (max-width:700px){
+.app-fontface{
+    position: absolute;
+    width:80vmin;
+    bottom: 191px;
+    text-shadow: 2px 2px red;
+  }
 }
