--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,300;0,700;1,100;1,300;1,700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Rock+Salt&display=swap');
+
 *{
     font-family: 'Work Sans', sans-serif;
+        overflow-x: hidden;
+
 }
 
