--- a/src/cssFiles/miscComponents/navKorioto.css
+++ b/src/cssFiles/miscComponents/navKorioto.css
@@ -1,28 +1,39 @@
+nav{
+    width: 100vw;
+    position: fixed;
+    z-index: 1;
+        overflow-x: hidden;
+    /* display: flex; */
+    /* min-height: 8vh; */
+}
+
 .koriotoNavContainer{
         display: flex;
         flex-direction: column;
         justify-content: center;
-        width: 100%;        
+        width: 100vw;        
         position: fixed;
         top: 0;
         text-align: center;
         z-index: 1;
 }
 .KoriotoNav{
-        padding-top: 20px;
+        transition: all 0.85s ease-in;
+        padding-top: 9px;
         display: flex;
         justify-content: center;
-        background-color: rgb(53, 53, 54);
+        background-color: rgba(220, 220, 220, 0.7);
         height: 40px;
-
 }
-
+.KoriotoNav:hover{
+        transition: all 0.35s ease-in;
+        background-color: rgba(47, 47, 47, 0.911);
+}
 .koriotoNaviDeco{
         margin-top: 1px;
         width: 100%;
         height: 2px;
 }
-
 .deco1{
         background-color: rgb(179, 132, 3);
 }
@@ -33,17 +44,73 @@
         background-color: rgb(181, 21, 0);
 }
 
-
 .NaviLink{
-        color: rgb(206, 206, 202);
-        font-weight: 900;
-        margin: 30px;
+        color: rgb(0, 0, 0);
+        margin: 15px;
         text-decoration: none;
-        font-size: 1.3em;
+        font-size: 1.8em;
         transition: all 0.5s ease-in;
 }
 
 .NaviLink:hover{
-        transition: all 0.5s ease-in;
+        font-weight: 400;
+        transition: all 0.2s ease-in;
         color: rgb(255, 255, 255);
+}
+
+
+
+
+@media screen and (max-width: 1100px){
+
+      
+
+
+
+.dropdown{
+        display: unset;
+}
+
+
+.burger:hover > .burgerLine{
+    transition: all 0.2s ease-in;
+    background-color: rgb(243, 243, 243);
+}
+
+.burger{
+    cursor: pointer;
+}
+
+.burger div{
+    transition: all 0.2s ease-in;
+    background-color: rgb(39, 39, 39);
+    width: 25px;
+    height: 2px;
+    margin: 5px;
+    display: flex;
+}
+
+
+
+.navDrawer{
+        margin-left: 21px;
+        font-size: 1.5em;
+}
+.drawerLinks{
+        color: black;
+        text-decoration: none;
+        transition: all 0.5s ease-in;
+}
+.drawerLinks:hover{
+        background-color: rgb(84, 84, 84);
+        color: whitesmoke;
+        transition: all 0.35s ease-in;
+}
+
+
+
+
+.NavLinkCont{
+display: none;        
+}
 }
