--- a/src/cssFiles/miscComponents/footer.css
+++ b/src/cssFiles/miscComponents/footer.css
@@ -1,4 +1,8 @@
 .generalFooterCont{
     width: 100%;
     /* height: 400px; */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
