--- a/src/cssFiles/miscComponents/parallax.css
+++ b/src/cssFiles/miscComponents/parallax.css
@@ -1,4 +1,15 @@
+a{
+    text-decoration: none;
 
+}
+.creditDiv{
+    color: black;
+    /* font-family: "Rock Salt"; */
+    font-size: 1.5em;
+    margin-left: 30px;
+    margin-right: 30px;
+    text-align: end;
+}
 
 .parallaxBackground{
     min-height: 300px; 
