--- a/src/cssFiles/miscComponents/navKorioto.css
+++ b/src/cssFiles/miscComponents/navKorioto.css
@@ -18,12 +18,16 @@ nav{
         z-index: 1;
 }
 .KoriotoNav{
+
+
         transition: all 0.85s ease-in;
         padding-top: 9px;
         display: flex;
         justify-content: center;
         background-color: rgba(220, 220, 220, 0.7);
         height: 40px;
+
+        display: none;
 }
 .KoriotoNav:hover{
         transition: all 0.35s ease-in;
