--- a/src/cssFiles/pages/koriotoLanding.css
+++ b/src/cssFiles/pages/koriotoLanding.css
@@ -70,6 +70,18 @@
   align-items: center;
   justify-content: center;
   grid-area: spotify;
+      box-shadow: 0px 0px 0px 0.5px rgba(50, 50, 93, 0.1),
+      0px 2px 5px 0px rgba(50, 50, 93, 0.1), 
+      0px 1px 1.5px 0px rgba(0, 0, 0, 0.07);
+    border-radius: 7px;
+  
+}
+
+.facebookEmbedContainer{
+  grid-area: spotify;
+      box-shadow: 0px 0px 0px 0.5px rgba(50, 50, 93, 0.1),
+      0px 0px 10px 0px rgba(50, 50, 93, 0.1), 
+      0px 0px 1.5px 0px rgba(0, 0, 0, 0.07);
 }
 .facebookDiv{
   display: flex;
@@ -82,6 +94,7 @@
   align-items: center;
   justify-content: center;
   grid-area: insta;
+  
 }
 
 .app-fontface2{
@@ -89,14 +102,27 @@
   margin-left: 20%;
 }
 
+.fillerDeco1{
+  height: 1px;
+  background-color: rgb(108, 85, 22);
+}
+
+.fillerDeco2{
+  height: 1px;
+  margin-top: 2px;
+  background-color: rgb(125, 118, 118);
+}
+.fillerDeco3{
+  height: 1px;
+  margin-top: 2px;
+  background-color: rgb(240, 46, 175);
+}
+
 .filler1-Intro{
   margin-bottom: 21px;
   font-size: 1.8em;
-  padding-top: 12px;
-  padding-bottom: 12px;
-  padding-left: 21px;
-  background-color: rgb(72, 71, 71);
-  color: whitesmoke;
+  padding-bottom: 22px;
+  color: rgb(0, 0, 0);
 }
 
 @keyframes App-icon-spin {
@@ -119,7 +145,7 @@
   }
 
   .App-icon2{
-    height: 100vmin;
+    height: 40vmin;
   }
 
   .socialGrid1{
