--- a/src/App.css
+++ b/src/App.css
@@ -24,10 +24,11 @@
 }
 
 @media screen and (max-width:700px){
-*{
-    font-family: 'Work Sans', sans-serif;
-    overflow-x: hidden;
 
+.placeholder{
+    width: 80%;
+    margin-left: 10%;
+    font-size: 1.8em;
 }
 
 }
