--- a/src/cssFiles/miscComponents/footer.css
+++ b/src/cssFiles/miscComponents/footer.css
@@ -1,4 +1,5 @@
 .generalFooterCont{
+    margin-top: 21px;
     padding-top: 40px;
     width: 100%;
     background-color: rgb(83, 83, 83);    
@@ -6,8 +7,6 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-
-
 }
 
 .creditsDiv{
@@ -54,7 +53,7 @@
 
 @media screen and (max-width: 1000px){
     .astronautIcon{
-    left: 4%;
+        left: 4%;
     }
     .planetIcon{
             right: 12%;
