--- a/src/cssFiles/pages/koriotoLanding.css
+++ b/src/cssFiles/pages/koriotoLanding.css
@@ -97,21 +97,22 @@
 }
 
 .app-fontface2{
-  width: 60%;
-  margin-left: 20%;
+  width: 40%;
+  margin-left: 30%;
+  margin-top: 50px;
 }
 
-.fillerDeco1{
+.fillerDeco41{
   height: 1px;
   background-color: rgb(108, 85, 22);
 }
 
-.fillerDeco2{
+.fillerDeco42{
   height: 1px;
   margin-top: 2px;
   background-color: rgb(125, 118, 118);
 }
-.fillerDeco3{
+.fillerDeco43{
   height: 1px;
   margin-top: 2px;
   background-color: rgb(240, 46, 175);
@@ -142,6 +143,8 @@
 
 }
 @media screen and (max-width:700px){
+
+
 .app-fontface{
     position: absolute;
     width:80vmin;
@@ -149,11 +152,98 @@
     text-shadow: 2px 2px red;
   }
 
-.facebookDiv{
-  margin-top: 41px;
-  margin-bottom: 41px;
-}
+  .app-fontface2{
+    width: 50%;
+    margin-left: 25%;
+    margin-top: 50px;
+  }
+  
 
+  .landingLanguageBTN{
+    margin-top: 12px;
+    font-size: 1.7em;
+  }
+
+
+  .landingExplainerTitleSPA{
+    padding-left: 15%;
+    border-left: rgba(180, 100, 47, 0.048) 33px solid;
+  }
+
+  .landingExplainerTitleENG{
+    margin-right: 6%;
+    margin-left: 30%
+  }
+
+  .fillerDeco4{
+    margin-left: 15%;
+    height: 1px;
+    background-color: rgb(0, 0, 0);
+  }
+  .fillerDeco5{
+    margin-top: 1px;
+    margin-left: 15%;
+    height: 1px;
+    background-color: rgb(148, 0, 185);
+  }
+  .fillerDeco6{
+    margin-top: 1px;
+    margin-left: 15%;
+    height: 1px;
+    background-color: rgb(155, 154, 152);
+  }
+
+  .fillerDeco7{
+    margin-right: 15%;
+    height: 1px;
+    background-color: rgb(165, 209, 18);
+  }
+
+  .fillerDeco8{
+    margin-top: 1px;
+    margin-right: 15%;
+    height: 1px;
+    background-color: rgb(149, 54, 17);
+  }
+
+  .fillerDeco9{
+    margin-top: 1px;
+    margin-right: 15%;
+    height: 1px;
+    background-color: rgb(0, 0, 0);
+  }
+
+  .explanierSPA{
+    margin-top: 6%;
+    padding-left: 6%;
+    margin-right: 15%;
+    border-left: rgb(180, 100, 47) 33px solid;
+  }
+  .explanierENG{
+    margin-top: 6%;
+    padding-right: 12%;
+    margin-left: 6%;
+    border-right: rgb(12, 51, 156) 33px solid;
+  }
+
+  .landingExplainer{
+    margin-top: 21px;
+  }
+
+  .langContent::first-letter{
+    font-size: 1.4em;
+  }
+
+  .langContent2{
+    margin-left: 33px;
+  }
+
+  .langContent3{
+    margin-bottom: 21px;
+    margin-left: 15px;
+  }
+
+ 
   .socialGrid1{
     display: grid;
     grid-template-areas: 
@@ -162,7 +252,12 @@
     "insta";
     }
 
+    .facebookDiv{
+      margin-top: 41px;
+      margin-bottom: 41px;
+    }
     .filler1-Intro{
       font-size: 1.2em;
   }
+
 }
