--- a/src/cssFiles/pages/koriotoLanding.css
+++ b/src/cssFiles/pages/koriotoLanding.css
@@ -134,7 +134,105 @@
   }
 }
 
+.landingLanguageBTN{
+    margin-top: 12px;
+    font-size: 1.7em;
+  }
 
+
+  .landingExplainerTitleSPA:hover{
+    color: white;
+    background-color: rgb(117, 117, 117);
+    transition: all ease-in 0.3s;
+  }
+  .landingExplainerTitleSPA{
+    transition: all ease-in 0.5s;
+    font-size: 3.5em;
+    padding-left: 15%;
+    border-left: rgba(180, 100, 47, 0.048) 33px solid;
+  }
+
+  .landingExplainerTitleENG:hover{ 
+    color: white;
+    background-color: rgb(117, 117, 117);
+    transition: all ease-in 0.3s;
+
+  }
+  .landingExplainerTitleENG{
+    transition: all ease-in 0.5s;
+    font-size: 3.5em;
+    padding-left: 55%;
+  }
+
+  .fillerDeco4{
+    margin-left: 15%;
+    height: 1px;
+    background-color: rgb(0, 0, 0);
+  }
+  .fillerDeco5{
+    margin-top: 1px;
+    margin-left: 15%;
+    height: 1px;
+    background-color: rgb(148, 0, 185);
+  }
+  .fillerDeco6{
+    margin-top: 1px;
+    margin-left: 15%;
+    height: 1px;
+    background-color: rgb(155, 154, 152);
+  }
+
+  .fillerDeco7{
+    margin-right: 15%;
+    height: 1px;
+    background-color: rgb(165, 209, 18);
+  }
+
+  .fillerDeco8{
+    margin-top: 1px;
+    margin-right: 15%;
+    height: 1px;
+    background-color: rgb(149, 54, 17);
+  }
+
+  .fillerDeco9{
+    margin-top: 1px;
+    margin-right: 15%;
+    height: 1px;
+    background-color: rgb(0, 0, 0);
+  }
+
+  .explanierSPA{
+    margin-top: 6%;
+    padding-left: 6%;
+    margin-right: 15%;
+    border-left: rgba(180, 100, 47, 0.911) 300px solid;
+  }
+  .explanierENG{
+    margin-top: 6%;
+    padding-right: 12%;
+    margin-left: 30%;
+    border-right: rgba(12, 50, 156, 0.781) 300px solid;
+  }
+
+  .landingExplainer{
+    margin-top: 21px;
+  font-size: 1.5em;
+    width: 450px;
+  }
+
+  .langContent::first-letter{
+    font-size: 1.4em;
+  }
+
+  .langContent2{
+    margin-left: 33px;
+  }
+
+  .langContent3{
+    margin-bottom: 21px;
+    margin-left: 15px;
+  }
 
 @media screen and (max-width:1200px){
   .App-icon2{
@@ -159,6 +257,7 @@
   }
   
 
+
   .landingLanguageBTN{
     margin-top: 12px;
     font-size: 1.7em;
@@ -172,7 +271,8 @@
 
   .landingExplainerTitleENG{
     margin-right: 6%;
-    margin-left: 30%
+    padding-left: 30%;
+
   }
 
   .fillerDeco4{
