blocked NAV till new content, removed placeholder event in home

--- a/src/cssFiles/pages/koriotoLanding.css
+++ b/src/cssFiles/pages/koriotoLanding.css
@@ -255,6 +255,14 @@
   }
 }
 
+
+.landingEventPlaceholder{
+  color: whitesmoke;
+  font-size: 2em;
+  text-align: center;
+  margin: 21px;
+}
+
 @media screen and (max-width:700px){
 
 
